# QRoseEngine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  QRoseEngine.sln  README.md
Demo/: Demo.vcxproj  MainWin32.cpp
QRoseEngine.Components/: CMakeLists.txt  MeshComponent.cpp
QRoseEngine.Core/: CMakeLists.txt  Color.cpp  Engine.h  GraphicsDesc.cpp  GraphicsDesc.h  QRoseEngineCore.vcxproj  QRoseEngineCore.vcxproj.filters  Scene.cpp  Size.cpp  Size.h  Streaming.cpp  Vector3.cpp  Win32EngineFactory.cpp  WindowDesc.cpp
QRoseEngine.Core/include/: Color.h  Color.hpp  Engine.h  EngineFactory.h  Entity.hpp  QCE.hpp  QRoseEngineCore.hpp  Scene.h  Serializable.hpp  Streaming.hpp  WindowDesc.h
QRoseEngine.Demo/: MainWin32.cpp
QRoseEngine.Platforms/: CMakeLists.txt
QRoseEngine.Platforms/QRoseEngine.Platforms.Win32/: CMakeLists.txt  Win32EngineFactory.cpp
assets/models/: box.fbx  characterlowpoly2.blend  characterlowpoly2.dae  human.blend  human.fbx  triangle.blend  triangle.dae
assets/shaders/: demo_fragment_shader.glsl  demo_vertex_shader.glsl
include/: QRoseCore.hpp  QRoseNN.hpp
include/QRoseEngine.Components/: MeshComponent.hpp  TransformationComponent.hpp
include/QRoseEngine.Core/: Angle.hpp  Assert.hpp  Clock.hpp  Color.h  Color.hpp  ComponentEventArgs.hpp  ComponentUpdatedEventArgs.hpp  ComponentsEntitiesRepository.hpp  ComponentsRepository.hpp  DebugRender.hpp  Delegate.hpp  Deserializer.hpp  ECService.hpp  Engine.hpp  EngineFactory.hpp  EntitiesComponentsRepository.hpp  EntitiesComponentsService.hpp  EntitiesRepository.hpp  EntitiesService.hpp  Entity.hpp  EntityEventArgs.hpp  EntityHandle.hpp  Event.hpp  EventArgs.hpp  EventInvoker.hpp  GraphicsDesc.hpp  Handle.hpp  IDebugRender.hpp  Managed.hpp  ManagedPtr.h  ManagedPtr.hpp  Manager.hpp  Matrix.hpp  Matrix4x4.hpp  NullDebugRender.hpp  QCE.hpp  QRoseEngineCore.h  RNDGen.hpp  Render.hpp  RenderSystem.hpp  (+15 more)
include/QRoseEngine.Core/Components/: MeshComponent.hpp  TransformComponent.hpp  TransformationComponent.hpp
include/QRoseEngine.Demo/: GLFWInput.hpp  GlfwInput.hpp  Input.hpp  MovableComponent.hpp  MovementData.hpp  MovementSystem.hpp
include/QRoseEngine.Demo.Application/: EntitiesComponentsService.hpp
include/QRoseEngine.Demo.Game/: DemoGame.hpp  EntitiesComponentsService.hpp  MovableComponent.hpp  MovementData.hpp  MovementSystem.hpp  World.hpp
include/QRoseEngine.Graphics/: Graphics.hpp  GraphicsDesc.hpp  MeshHandle.hpp  Render.hpp  RenderSystem.hpp  Scene.hpp  WindowDesc.hpp
include/QRoseEngine.Graphics.OpenGL/: BoxMesh.hpp  OpenGLGraphics.hpp  OpenGLRender.hpp  OpenGLResourcesManager.hpp  OpenGlGraphics.hpp  OpenGlMesh.hpp  OpenGlRender.hpp  OpenGlResourcesManager.hpp
include/QRoseEngine.Graphics/Components/: CameraComponent.hpp  LightComponent.hpp  MeshComponent.hpp
include/QRoseEngine.NN/: Functions.hpp  NeuralNetwork.hpp  NeuralNetworkTrainer.hpp
include/QRoseEngine.Platform/: Engine.hpp  EngineFactory.hpp  Scene.hpp
include/QRoseEngine.Platform.Agnostic/: AgnosticEngine.hpp
include/QRoseEngine.Platforms.Win32/: Win32Engine.hpp
include/QRoseEngine.Platforms/QRoseEngine.Platforms.Win32/: Win32Engine.hpp
src/QRoseEngine.Components/: CMakeLists.txt  MeshComponent.cpp  TransformationComponent.cpp
src/QRoseEngine.Core/: Angle.cpp  CMakeLists.txt  Color.cpp  ComponentsRepository.cpp  DebugRender.cpp  ECService.cpp  Engine.cpp  EntitiesComponentsRepository.cpp  EntitiesComponentsService.cpp  EntitiesRepository.cpp  Entity.cpp  GraphicsDesc.cpp  Managed.cpp  Manager.cpp  Matrix.cpp  Matrix4x4.cpp  RenderSystem.cpp  Scene.cpp  Size.cpp  Streaming.cpp  Uuid.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp  WindowDesc.cpp
src/QRoseEngine.Core/Components/: CMakeLists.txt  MeshComponent.cpp  TransformComponent.cpp  TransformationComponent.cpp
src/QRoseEngine.Demo/: GLFWInput.cpp  GlfwInput.cpp  MainWin32.cpp  MovementSystem.cpp  NeuralNetworkDemo.cpp  World.cpp  config.json
src/QRoseEngine.Demo.Application/: CMakeLists.txt  EntitiesComponentsService.cpp  GLFWInput.cpp
src/QRoseEngine.Demo.Game/: CMakeLists.txt  DemoGame.cpp  EntitiesComponentsService.cpp  MovableComponent.cpp  MovementSystem.cpp  World.cpp
src/QRoseEngine.Graphics/: CMakeLists.txt  GraphicsDesc.cpp  RenderSystem.cpp  Scene.cpp  WindowDesc.cpp
src/QRoseEngine.Graphics.OpenGL/: BoxMesh.cpp  CMakeLists.txt  OpenGLGraphics.cpp  OpenGLRender.cpp  OpenGLResourcesManager.cpp  OpenGlGraphics.cpp  OpenGlRender.cpp  OpenGlResourcesManager.cpp
src/QRoseEngine.Graphics/Components/: CameraComponent.cpp  MeshComponent.cpp
src/QRoseEngine.NN/: CMakeLists.txt  Functions.cpp  NeuralNetwork.cpp  NeuralNetworkTrainer.cpp
src/QRoseEngine.Platform/: CMakeLists.txt  Engine.cpp  Scene.cpp
src/QRoseEngine.Platform.Agnostic/: AgnosticEngine.cpp  AgnosticEngineFactory.cpp  CMakeLists.txt
src/QRoseEngine.Platforms/: CMakeLists.txt
src/QRoseEngine.Platforms.Win32/: CMakeLists.txt  Win32Engine.cpp  Win32EngineFactory.cpp
src/QRoseEngine.Platforms/QRoseEngine.Platforms.Win32/: Win32Engine.cpp  Win32EngineFactory.cpp
